Added first functionallity for dynamic discovery and server list

--- a/README.adoc
+++ b/README.adoc
@@ -21,7 +21,7 @@ image::images\Comms.png[width=700]
 == Components
 
 === Server 
-To start a server locally, simply run the following command in a shell (assuming python is installed on your system): 
+To start a server locally, simply run: 
 
 [,python]
 ----
@@ -31,7 +31,7 @@ server.py
 Once the server instance is started, it will broadcast its IP adress and check if its broadcast group already has a leader. If not, the server elects itself as the leader. If the broadcast group already has a leader, an election is triggered. The server with the highest process ID is elected as the new leader. If there has been a switch in leadership, the old leader acknowledges that it is no longer the leader of the group. The newly elected leader updates its group view and replicates it across the broadcast group, informing other servers of its new leadership position. 
 
 === Client
-To start a client locally, simply run the following command in a shell (assuming python is installed on your system): 
+To start a client locally, simply run: 
 
 [,python]
 ----
